Mobile fix video spacing
Removed extra padding on mobile view of video section

--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -129,6 +129,12 @@
   padding-bottom: 0;
 }
 
+@media (max-width: 768px) {
+  #donation {
+    padding-top: 0 !important;
+  }
+}
+
 
 /* ---------------- Expo participants section ------------------------ */
 #exhibitors-slider {
